tests/baselines/reference/asyncGetter_es5(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
asyncGetter_es5.ts(2,3): error TS1042: 'async' modifier cannot be used here.
asyncGetter_es5.ts(2,13): error TS2378: A 'get' accessor must return a value.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== asyncGetter_es5.ts (2 errors) ====
    class C {
      async get foo() {
      ~~~~~
!!! error TS1042: 'async' modifier cannot be used here.
                ~~~
!!! error TS2378: A 'get' accessor must return a value.
      }
    }